--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "node": "^20.16.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "vercel": "^36.0.0"
   },
   "name": "formulario",
   "version": "1.0.0",
