--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "mercadopago": "^2.0.15",
     "mysql": "^2.18.1",
     "node": "^20.16.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.4",
+    "redis": "^4.7.0",
     "vercel": "^36.0.0"
   },
   "name": "formulario",
